--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             6.cards
         </h2>
         <div class="cards">
-            <div class="card"><img src="images/2022-03-25.jpg" alt="Le Wagon Paris"><h3>Paris</h3></div>
-            <div class="card"><img src="images/paris.jpg" alt="Le Wagon Paris"><h3>Nantes</h3></div>
-            <div class="card"><img src="images/angers.avif" alt="Le Wagon Paris"><h3>Angers</h3></div>
+            <div class="card"><img src="Images/2022-03-25.jpg" alt="Le Wagon Paris"><h3>Paris</h3></div>
+            <div class="card"><img src="Images/paris.jpg" alt="Le Wagon Paris"><h3>Nantes</h3></div>
+            <div class="card"><img src="Images/angers.avif" alt="Le Wagon Paris"><h3>Angers</h3></div>
           <!-- etc... -->
         </div>
     </div>
